correccion de estilos de template

--- a/web/templates/templategeneral.xhtml
+++ b/web/templates/templategeneral.xhtml
@@ -35,7 +35,7 @@
         
         <footer class="footer">
             <ui:insert name="footer"></ui:insert>
-            sdfsd
+            Universidad Santo Tomas Seccional Tunja
         </footer>
     </h:body>
 </html>
